resume memoryCue